# documentgraph

./: LICENSE  README.md  etl-architecture-diagram.mermaid  pyproject.toml  requirements.txt  setup.py
documentgraph/: __init__.py  cli.py  extraction.py  loading.py  main.py  transformation.py
src/: __init__.py  config.py  extraction.py  loading.py  main.py  models.py  query.py  transformation.py
